--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ color:#dadada;
 }
 body{
 
-    background-color:rgb(47, 255, 109);
+    background-color:#614ad3;
     font-family: 'Press Start 2P', sans-serif;
     color: rgba(8,255,200,1);
     font-family: "cwTeXKai", serif;
